--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@tanstack/react-query": "^4.24.10",
     "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-hook-form": "^7.43.5",
+    "react-router-dom": "^6.8.1",
+    "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
